--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "start": "cd frontend && npm run start",
     "dev": "cd frontend && npm run dev",
-    "deploy": "cd contract && ./deploy.sh",
-    "build": "npm run build:contract && npm run build:frontend",
+    "deploy": "cd contracts && ./deploy.sh",
+    "build": "npm run build:contracts && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
-    "build:contract": "cd contract && ./build.sh",
+    "build:contracts": "cd contracts && ./build.sh",
     "test": "npm run test:unit && npm run test:integration",
-    "test:unit": "cd contract && cargo test",
+    "test:unit": "cd contracts && cargo test",
     "test:integration": "cd integration-tests && cargo run --example integration-tests \"../contract/target/wasm32-unknown-unknown/release/hello_near.wasm\"",
     "postinstall": "cd frontend && npm install && cd .. && echo rs tests && echo rs contract",
     "lint": "cd frontend && npm run lint",
