Factory with FT

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "start": "cd frontend && npm run start",
     "deploy": "cd contract && ./deploy.sh",
-    "build": "npm run build:contract && npm run build:web",
+    "build": "npm run build:ft && npm run build:contract && npm run build:web",
     "build:web": "cd frontend && npm run build",
     "build:contract": "cd contract && ./build.sh",
+    "build:ft": "cd fungible-token && ./build.sh",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "cd contract && cargo test",
-    "test:integration": "cd integration-tests && cargo run --example integration-tests \"../contract/target/wasm32-unknown-unknown/release/hello_near.wasm\"",
+    "test:integration": "cd integration-tests && npm test -- -- \"./contract/target/wasm32-unknown-unknown/release/loyalty_program_with_ft.wasm\"",
     "postinstall": "cd frontend && npm install && cd .. && echo rs tests && echo rs contract",
     "lint": "eslint .",
     "prettier:check": "cd frontend && npm run prettier:check",
