Factory with FT

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "cd frontend && npm run start",
     "dev": "cd frontend && npm run dev",
     "deploy": "cd contracts && ./deploy.sh",
-    "build": "npm run build:contracts && npm run build:frontend",
+    "build": "npm run build:ft && npm run build:contract && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "build:contracts": "cd contracts && ./build.sh",
+    "build:ft": "cd fungible-token && ./build.sh",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "cd contracts && cargo test",
-    "test:integration": "cd integration-tests && cargo run --example integration-tests \"../contract/target/wasm32-unknown-unknown/release/hello_near.wasm\"",
+    "test:integration": "cd integration-tests && npm test -- -- \"./contract/target/wasm32-unknown-unknown/release/loyalty_program_with_ft.wasm\"",
     "postinstall": "cd frontend && npm install && cd .. && echo rs tests && echo rs contract",
     "lint": "cd frontend && npm run lint",
     "prettier:check": "cd frontend && npm run prettier:check",
