--- a/contracts/fungible-token/Cargo.toml
+++ b/contracts/fungible-token/Cargo.toml
@@ -2,11 +2,12 @@
 name = "fungible-token"
 version = "1.0.0"
 authors = ["Near Inc <hello@nearprotocol.com>"]
-edition = "2018"
+edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 near-sdk = "4.0.0"
+uint = { version = "0.9.3", default-features = false }
 near-contract-standards = "4.0.0"
