--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "license": "(MIT AND Apache-2.0)",
   "scripts": {
     "start": "cd frontend && npm run start",
-    "deploy": "cd contract && ./deploy.sh",
-    "build": "npm run build:ft && npm run build:contract && npm run build:web",
+    "deploy": "cd contracts && ./deploy.sh",
+    "build": "npm run build:ft && npm run build:contracts && npm run build:web",
     "build:web": "cd frontend && npm run build",
-    "build:contract": "cd contract && ./build.sh",
-    "build:ft": "cd fungible-token && ./build.sh",
+    "build:contracts": "cd contracts && ./build.sh",
     "test": "npm run test:unit && npm run test:integration",
-    "test:unit": "cd contract && cargo test",
-    "test:integration": "npm run build:contract && cd integration-tests && npm test -- -- \"./contract/target/wasm32-unknown-unknown/release/loyalty_program_with_ft.wasm\"",
+    "test:unit": "cd contracts && cargo test",
+    "test:integration": "npm run build:contracts && cd integration-tests && npm test -- -- \"./contracts/target/wasm32-unknown-unknown/release/reward_factory.wasm\"",
     "postinstall": "cd frontend && npm install && cd .. && cd integration-tests && npm install && echo rs contract",
     "lint": "eslint .",
     "prettier:check": "cd frontend && npm run prettier:check",
