--- a/.gitignore
+++ b/.gitignore
@@ -8,16 +8,13 @@ node_modules
 # build
 .next/
 /out
-frontend/dist
 
 
 /dist
-contracts/build
-contracts/neardev
-contracts/target
-/frontend/dist
-/fungible-token/target
-/integration-tests/node_modules
+**/target
+**/neardev
+**/dist
+**/node_modules
 
 # testing
 /coverage
