--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "cd frontend && npm run start",
     "deploy": "cd contracts && ./deploy.sh",
-    "build": "npm run build:ft && npm run build:contracts && npm run build:web",
+    "build": "npm run build:contracts && npm run build:web",
     "build:web": "cd frontend && npm run build",
     "build:contracts": "cd contracts && ./build.sh",
     "test": "npm run test:unit && npm run test:integration",
