--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -9,5 +9,6 @@ overflow-checks = true
 [workspace]
 members = [
     "reward-factory",
-    "fungible-token"
+    "fungible-token",
+    "manager-contract"
 ]
