Factory & deploy fixes

--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -8,7 +8,7 @@ overflow-checks = true
 
 [workspace]
 members = [
-    "reward-factory",
+    "manager-contract",
     "fungible-token",
-    "manager-contract"
+    "reward-factory",
 ]
