--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "cd frontend && npm run start",
     "dev": "cd frontend && npm run dev",
-    "deploy": "cd contracts && ./deploy.sh",
+    "deploy": "cd contracts && ./deploy.sh && npm run build:frontend",
     "build": "npm run build:contracts && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "build:contracts": "cd contracts && ./build.sh",
