--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,17 +23,19 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "@near-wallet-selector/core": "^7.0.0",
-    "@near-wallet-selector/ledger": "^7.0.0",
-    "@near-wallet-selector/math-wallet": "^7.0.0",
-    "@near-wallet-selector/meteor-wallet": "^7.0.0",
-    "@near-wallet-selector/modal-ui": "^7.0.0",
-    "@near-wallet-selector/my-near-wallet": "^7.0.0",
-    "@near-wallet-selector/near-wallet": "^7.0.0",
-    "@near-wallet-selector/nightly": "^7.0.0",
-    "@near-wallet-selector/nightly-connect": "^7.0.0",
-    "@near-wallet-selector/sender": "^7.0.0",
-    "@near-wallet-selector/wallet-connect": "^7.0.0",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
+    "@near-wallet-selector/core": "^7.4.0",
+    "@near-wallet-selector/ledger": "^7.4.0",
+    "@near-wallet-selector/math-wallet": "^7.4.0",
+    "@near-wallet-selector/meteor-wallet": "^7.4.0",
+    "@near-wallet-selector/modal-ui": "^7.4.0",
+    "@near-wallet-selector/my-near-wallet": "^7.4.0",
+    "@near-wallet-selector/near-wallet": "^7.4.0",
+    "@near-wallet-selector/nightly": "^7.4.0",
+    "@near-wallet-selector/nightly-connect": "^7.4.0",
+    "@near-wallet-selector/sender": "^7.4.0",
+    "@near-wallet-selector/wallet-connect": "^7.4.0",
     "near-api-js": "^0.44.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
