Nextjs, tailwind css/ui, refactor wallet-selector

--- a/package.json
+++ b/package.json
@@ -3,26 +3,22 @@
   "version": "1.0.0",
   "license": "(MIT AND Apache-2.0)",
   "scripts": {
+    "dev": "cd frontend && npm run dev",
+    "build": "npm run build:frontend",
+    "build:frontend": "cd frontend && npm run build",
     "start": "cd frontend && npm run start",
-    "deploy": "cd contracts && ./deploy.sh && npm run build:web",
-    "build": "npm run build:contracts && npm run build:web",
-    "build:web": "cd frontend && npm run build",
-    "build:contracts": "cd contracts && ./build.sh",
-    "test": "npm run test:unit && npm run test:integration",
-    "test:unit": "cd contracts && cargo test",
-    "test:integration": "npm run build:contracts && cd integration-tests && npm test -- -- \"./contracts/target/wasm32-unknown-unknown/release/reward_factory.wasm\"",
-    "postinstall": "cd frontend && npm install && cd .. && cd integration-tests && npm install && echo rs contract",
-    "lint": "eslint .",
-    "prettier:check": "cd frontend && npm run prettier:check",
+    "postinstall": "cd frontend && npm install",
+    "lint": "cd frontend && npm run lint",
     "prepare": "husky install"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
     "near-cli": "^3.3.0"
   },
   "lint-staged": {
