--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,24 +3,10 @@
   "version": "1.0.0",
   "license": "(MIT AND Apache-2.0)",
   "scripts": {
-    "start": "./start.sh",
-    "build": "parcel build index.html --public-url ./",
-    "prettier:check": "prettier --check ."
-  },
-  "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-react": "^7.17.12",
-    "@types/node": "^18.6.2",
-    "buffer": "^5.7.1",
-    "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.16",
-    "parcel": "^2.6.0",
-    "prettier": "2.7.1",
-    "process": "^0.11.10",
-    "react-test-renderer": "^18.1.0",
-    "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
@@ -36,25 +22,23 @@
     "@near-wallet-selector/nightly-connect": "^7.4.0",
     "@near-wallet-selector/sender": "^7.4.0",
     "@near-wallet-selector/wallet-connect": "^7.4.0",
-    "near-api-js": "^0.44.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^6.6.2",
-    "regenerator-runtime": "^0.13.9"
+    "@next/font": "13.1.1",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
+    "near-api-js": "^1.1.0",
+    "next": "13.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
-  "resolutions": {
-    "@babel/preset-env": "7.13.8"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.6.0",
+    "postcss": "^8.4.21",
+    "prettier": "2.8.1",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   }
 }
