--- a/.github/workflows/deploy-to-console.yml
+++ b/.github/workflows/deploy-to-console.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  PAGODA_CONSOLE_URL: https://developer-console-api-test-k2zt32g7mq-ue.a.run.app
+  PAGODA_CONSOLE_URL: https://developer-console-api-prod-k2zt32g7mq-ue.a.run.app
   CONTRACT_WASM_PATH: contracts/res/reward_factory.wasm
   FRONTEND_PACKAGE_NAME: Customer Loyalty Frontend
 
@@ -19,7 +19,7 @@ jobs:
           TEMP_SECRET="${{secrets.PAGODA_CONSOLE_TOKEN}}"
           TEMP=$(echo ${TEMP_SECRET:6} | base64 --decode)
           echo "GITHUB_REPO_FULL_NAME=$(echo ${TEMP%:*})" >> $GITHUB_ENV
-    
+
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
@@ -28,16 +28,16 @@ jobs:
       - name: Install 🔧
         run: |
           npm install --frozen-lockfile
-      
+
       - name: Build Contracts 🔧
         run: |
           npm run build:contracts
-          
+
       - name: Upload File
         id: upload
         uses: jon-lewis/upload-file-action@master
         with:
-          url: '${{ env.PAGODA_CONSOLE_URL }}/deploys/deployWasm'
+          url: "${{ env.PAGODA_CONSOLE_URL }}/deploys/deployWasm"
           forms: '{"githubRepoFullName":"${{ env.GITHUB_REPO_FULL_NAME }}","commitMessage": "${{ github.event.head_commit.message }}", "commitHash": "${{ github.sha }}"}'
           customHeaders: '{"Authorization": "${{ secrets.PAGODA_CONSOLE_TOKEN }}"}'
           fileForms: '{"main.wasm":"${{ env.CONTRACT_WASM_PATH }}"}'
@@ -57,8 +57,8 @@ jobs:
         id: uploadFrontend
         uses: jon-lewis/upload-directory-action@master
         with:
-          url: '${{ env.PAGODA_CONSOLE_URL }}/ipfs/add'
-          forms: '{}'
+          url: "${{ env.PAGODA_CONSOLE_URL }}/ipfs/add"
+          forms: "{}"
           customHeaders: '{"Authorization": "${{ secrets.PAGODA_CONSOLE_TOKEN }}"}'
           directory: frontend/out
 
@@ -66,7 +66,7 @@ jobs:
         id: update-frontend-url
         uses: fjogeleit/http-request-action@v1
         with:
-          url: '${{ env.PAGODA_CONSOLE_URL }}/deploys/addFrontend'
-          method: 'POST'
+          url: "${{ env.PAGODA_CONSOLE_URL }}/deploys/addFrontend"
+          method: "POST"
           data: '{"repoDeploymentSlug": "${{ fromJson(steps.upload.outputs.output).data.slug }}", "cid": "${{ fromJson(steps.uploadFrontend.outputs.output).data.cid }}", "packageName": "${{ env.FRONTEND_PACKAGE_NAME }}" }'
           customHeaders: '{"Authorization": "${{ secrets.PAGODA_CONSOLE_TOKEN }}"}'
